<resources>
    <!-- <string name="app_name">Electus</string>-->
    <string name="appname">Electus</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Planning and Execution</string>
    <string name="slide_1_desc">Board Curriculum design ,IIT/NEET foundation course design,Year wise schedule,Lesson plans,Student Activities,Educational events</string>

    <string name="slide_2_title">Staff Recruitment and Training</string>
    <string name="slide_2_desc">Staff requirement analysis,Staff procurement and appointment,Staff training,Staff skill enrichment</string>

    <string name="slide_3_title">Online exam portal</string>
    <string name="slide_3_desc">Marks analysis,Error analysis,Time analysis,Offline exam analysis,Online platform for exams</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous"><![CDATA[<<Previous]]></string>
    <string name="next_btn"><![CDATA[Next>>]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_otp">Sign In With OTP</string>
    <string name="sign_in">Sign In</string>
    <string name="need_help">Need help?</string>
    <string name="error_description">Some thing went wrong please try after some time</string>
    <string name="error_failure_header">Error</string>
    <string name="loading_please_wait">Loading Please Wait...</string>
    <string name="exam_name">Exam Name :</string>
    <string name="subject">subject :</string>
    <string name="date">date</string>
    <string name="start_time">start time</string>
    <string name="end_time">End time</string>
    <string name="start_exam">start exam</string>
    <string name="exams_list">Exams List</string>
    <string name="exam_type">Exam Type :</string>
    <string name="instructions">instructions</string>
    <string name="testing_exam">TESTING EXAM</string>
    <string name="maths_physics_chemistry">Maths,physics,chemistry</string>
    <string name="bulletpoint">●</string>
</resources>
