<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_exam_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_type"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margintop_list"
        android:layout_marginLeft="@dimen/marginleft_list"/>

    <TextView
        android:id="@+id/tv_exam_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_name"
        android:layout_marginTop="@dimen/margintop_list"
        android:layout_below="@+id/tv_exam_type"
        android:layout_marginLeft="@dimen/marginleft_list"/>
    <TextView
        android:id="@+id/tv_exam_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testing_exam"
        android:layout_marginTop="@dimen/margintop_list"
        android:layout_below="@+id/tv_exam_type"
        android:layout_toRightOf="@+id/tv_exam_name_label"
        android:visibility="gone"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/tv_subject_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:layout_below="@+id/tv_exam_name_label"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/marginleft_list"/>
    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maths,physics,chemistry"
        android:layout_below="@+id/tv_exam_name_label"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tv_subject_label"
        android:layout_marginLeft="@dimen/marginleft_list"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/tv_subject_label"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/marginleft_list"/>
    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/marginleft_list"
        android:layout_below="@+id/tv_date"/>
    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/marginleft_list"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/tv_date"/>
    <Button
        android:id="@+id/btn_start_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exam"
        android:layout_below="@+id/tv_end_time"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="10sp"
        android:layout_below="@+id/tv_end_time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btn_start_exam"
        android:layout_marginTop="@dimen/margintop_list"
        android:background="@drawable/rounded_corner_button_blue"/>
</RelativeLayout>