<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
<RelativeLayout
    android:id="@+id/rl_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/iv_back_arrow"
        android:text="Login to Electus 1"
        android:textSize="16dp"
        android:textStyle="bold"/>
</RelativeLayout>
<EditText
    android:id="@+id/et_user_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/rl_header"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:hint="User Name"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/rounded_background_edittext"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_user_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_background_edittext"/>

    <LinearLayout
        android:id="@+id/ll_btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/et_password">
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button_blue"
            android:layout_below="@+id/spinner_schools"/>

        <Button
            android:id="@+id/btn_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/sign_in_with_otp"
            android:textSize="16dp"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_button_blue"
            android:layout_below="@+id/spinner_schools"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll_btns_layout">
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="#170fa9"
            android:padding="5dp"
            android:background="@drawable/rounded_background_edittext_grey"/>

        <TextView
            android:id="@+id/tv_need_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_help"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#170fa9"
            android:padding="5dp"
            android:textSize="15dp"
            android:background="@drawable/rounded_background_edittext_grey"/>


    </LinearLayout>

</RelativeLayout>